// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders regular FloatingButton with a single action 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "transparent",
      "bottom": 0,
      "elevation": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 0,
    }
  }
>
  <View
    accessibilityLabel="Floating Action Button"
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#486c86",
        "borderRadius": 28,
        "bottom": 30,
        "center": 30,
        "elevation": 5,
        "height": 56,
        "justifyContent": "center",
        "left": 347,
        "overflow": "visible",
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 3,
        "width": 56,
        "zIndex": 2,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 28,
          "height": 56,
          "justifyContent": "center",
          "opacity": 1,
          "width": 56,
          "zIndex": 3,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 28,
            "flex": 1,
            "height": 56,
            "justifyContent": "center",
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
            "width": 56,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders regular FloatingButton with multiple actions 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "transparent",
      "bottom": 0,
      "elevation": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 0,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "bottom": 94,
        "left": -1000,
        "opacity": 0,
        "position": "absolute",
        "zIndex": 10,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "elevation": 0,
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "elevation": 0,
            "flex": 1,
            "flexDirection": "row",
            "marginBottom": 5,
            "paddingBottom": 8,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 8,
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 20,
                "elevation": 5,
                "height": 40,
                "justifyContent": "center",
                "padding": 5,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
                "width": 40,
              },
              Object {
                "backgroundColor": "#486c86",
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFF",
                  "fontSize": 25,
                },
                undefined,
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "elevation": 0,
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "elevation": 0,
            "flex": 1,
            "flexDirection": "row",
            "marginBottom": 5,
            "paddingBottom": 8,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 8,
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 20,
                "elevation": 5,
                "height": 40,
                "justifyContent": "center",
                "padding": 5,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
                "width": 40,
              },
              Object {
                "backgroundColor": "#486c86",
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFF",
                  "fontSize": 25,
                },
                undefined,
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "elevation": 0,
          "flex": 1,
          "flexDirection": "column",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "elevation": 0,
            "flex": 1,
            "flexDirection": "row",
            "marginBottom": 5,
            "paddingBottom": 8,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 8,
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 20,
                "elevation": 5,
                "height": 40,
                "justifyContent": "center",
                "padding": 5,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 5,
                  "width": 0,
                },
                "shadowOpacity": 0.35,
                "shadowRadius": 3,
                "width": 40,
              },
              Object {
                "backgroundColor": "#486c86",
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#FFF",
                  "fontSize": 25,
                },
                undefined,
                Object {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Floating Action Button"
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#486c86",
        "borderRadius": 28,
        "bottom": 30,
        "center": 30,
        "elevation": 5,
        "height": 56,
        "justifyContent": "center",
        "left": 347,
        "overflow": "visible",
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 3,
        "width": 56,
        "zIndex": 2,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 28,
          "height": 56,
          "justifyContent": "center",
          "opacity": 1,
          "width": 56,
          "zIndex": 3,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 28,
            "flex": 1,
            "height": 56,
            "justifyContent": "center",
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
            "width": 56,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders regular FloatingButton with specific icon 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "backgroundColor": "transparent",
      "bottom": 0,
      "elevation": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 0,
    }
  }
>
  <View
    accessibilityLabel="Floating Action Button"
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#486c86",
        "borderRadius": 28,
        "bottom": 30,
        "center": 30,
        "elevation": 5,
        "height": 56,
        "justifyContent": "center",
        "left": 347,
        "overflow": "visible",
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 5,
          "width": 0,
        },
        "shadowOpacity": 0.35,
        "shadowRadius": 3,
        "width": 56,
        "zIndex": 2,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 28,
          "height": 56,
          "justifyContent": "center",
          "opacity": 1,
          "width": 56,
          "zIndex": 3,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 28,
            "flex": 1,
            "height": 56,
            "justifyContent": "center",
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
            "width": 56,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
